# culinary_site_parser

./: .gitignore  README.md  iu7-algan-cicd-student.mk
code/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
code/common_utils/: Cargo.toml
code/common_utils/src/: connections.rs  lib.rs  recipe_parser.rs
code/grafana_dashboard/: grafana.db
code/load_automaton/: Cargo.toml
code/load_automaton/src/: fileio.rs  html_loader.rs  main.rs
code/parse_automaton/: Cargo.toml
code/parse_automaton/src/: elementaree_parser.rs  link_parser.rs  main.rs
code/store_automaton/: Cargo.toml
code/store_automaton/src/: main.rs
code/tests/elementaree.ru/gril-ciz/: index.html
code/web_server/: Cargo.toml
code/web_server/src/: index.html  main.rs
docs/src/: appendix.tex  content.tex  preamble.tex  title.tex
report/: annex.tex  biblio.bib  content.tex  preamble.tex  report.tex
