[workspace]
members = ["load_automaton", "parse_automaton", "store_automaton", "web_server"]

resolver = "2"

[workspace.dependencies]
anyhow = "^1.0"
amqprs = "^2.1"
colored = "^2.1"
url = "^2.5"
tokio = { version = "^1.41", features = ["full"] }
common_utils = { path = "./common_utils" }
redis = "^0.27"
serde = "^1.0"
bincode = "^1.3"
warp = "^0.3"
futures = "^0.3"
dotenv = "^0.15"
chrono = "^0.4"
influxdb2 = "^0.5"
mongodb = "^3.1"
reqwest = "^0.12"
tokio-stream = "^0.1"
futures-util = "^0.3"
# lazy_static = "^1.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
