[package]
name = "load_automaton"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
select = "^0.6"
fs-err = "^3"
num = "^0.4"

tokio.workspace = true
anyhow.workspace = true
amqprs.workspace = true
colored.workspace = true
url.workspace = true
common_utils.workspace = true
redis.workspace = true
warp.workspace = true
futures.workspace = true
dotenv.workspace = true
chrono.workspace = true
influxdb2.workspace = true
