[package]
name = "store_automaton"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
amqprs.workspace = true
colored.workspace = true
common_utils.workspace = true
serde.workspace = true
bincode.workspace = true
warp.workspace = true
futures.workspace = true
redis.workspace = true
dotenv.workspace = true
chrono.workspace = true
influxdb2.workspace = true
mongodb.workspace = true
